// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "fontFamily": "space-mono",
      },
      undefined,
    ]
  }
>
  Snapshot test!
</Text>
`;

exports[`renders red color 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  color="red"
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "fontFamily": "space-mono",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  Snapshot test!
</Text>
`;
